--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,11 @@ dependencies:
   pay: ^1.1.2
   permission_handler: ^11.0.0
   firebase_core: ^2.17.0
+  cloud_firestore: ^4.12.0
   firebase_auth: ^4.10.0
   simple_animations: ^5.0.2
   provider: ^6.0.5
+  flutter_spinkit: ^5.2.0
   
 
 dev_dependencies:
